# book-ai

./: .gitignore  main.py  pyproject.toml  structure.txt
app/: main.py
app/api/: __init__.py
app/api/books/: models.py  router.py  schemas.py
app/api/restaurant/: models.py  router.py  schemas.py
app/api/users/: models.py  router.py  schemas.py  utils.py
app/api/v1/: books.py
app/core/: config.py  security.py
app/models/: book.py
app/schemas/: __init__.py  book.py
