[project]
name = "my-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-ai>=1.0.3",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
