[project]
name = "my-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "bcrypt==4.1.2",
    "beautifulsoup4>=4.13.5",
    "fastapi[standard]>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-ai>=1.0.3",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "selenium>=4.35.0",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "uvicorn[standard]>=0.35.0",
]
